tests/method_properties/__snapshots__/jsfmt.spec.js.snap
exports[`test exports_optional_prop.js 1`] = `
"// @flow

declare class Foo {
  bar?: () => string
}

export {Foo};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1348
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1348:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1452:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;

exports[`test test.js 1`] = `
"class C {
  C() { }
  foo() { }
  static bar() { }
  qux() { this.constructor.x; }
}
C.x;
(new C).foo.x;
C.bar.x;

import {Foo} from \'./exports_optional_prop\';
const foo = new Foo();
(foo.bar(): string); // error, could be undefined

function f(x) {
  (x.bar(): string); // error. caused by \`f(foo)\`; annotate x to track it down.
}
f(foo);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class C {
  C() {
    
  }
  foo() {
    
  }
  bar() {
    
  }
  qux() {
    this.constructor.x;
  }
}
C.x;
new C().foo.x;
C.bar.x;
import { Foo } from \"./exports_optional_prop\";
const foo = new Foo();
(foo.bar(): string);// error, could be undefined
function f(x) {
  (x.bar(): string);// error. caused by \`f(foo)\`; annotate x to track it down.
}
f(foo);

"
`;
